config-error-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-error-demo
spec:
  containers:
  - name: nginx
    image: nginx
