deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nextjs-demo-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nextjs-demo-app

  template:
    metadata:
      labels:
        app: nextjs-demo-app

    spec:
      containers:
        - name: nextjs-demo-app
          image: aishwaryadevaraj/nextjs-demo-app:9
          ports:
            - containerPort: 3000
