pending-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pending-demo
spec:
  containers:
    - name: pending-container
      image: nginx
      resources:
        requests:
          cpu: "100"
