service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nextjs-demo-app-service

spec:
  type: ClusterIP

  selector:
    app: nextjs-demo-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
